[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "greynoiselabs"
version = "0.1.13"
description = "Abstraction to interact with GreyNoise Labs GraphQL API."
authors = ["GreyNoise Intelligence <labs@greynoise.io>"]
license = "MIT"
readme = "README.rst"
homepage = "https://api.labs.greynoise.io/"
repository = "https://github.com/GreyNoise-Intelligence/greynoiselabs"
documentation = "https://api.labs.greynoise.io/"
keywords = ["internet", "scanning", "threat intelligence", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.scripts]
greynoiselabs = "greynoiselabs.cli.main:app"

[tool.poetry.dev-dependencies]
ariadne-codegen = "0.7.1"
pre-commit = "3.3.2"
tox = "4.6.4"
wheel = "0.36.2"
black = [
    { version = "<23.1.0", python = "<3.7" },
    { version = "^23.1.0", python = ">=3.7" },
]
ruff = { version = "^0.0.280", python = ">=3.6" }
isort = [
    { version = "<5.12.0", python = "<3.8" },
    { version = "^5.12.0", python = ">=3.8" },
]
mock = { version = "^5.0.1", python = ">=3.6" }
pylint = [
    { version = "<2.16.2", python = "==3.6" },
    { version = "^2.17.4", python = ">=3.7" },
]
pytest-cov = { version = "^4.0.0", python = ">=3.6" }
pytest = [
    { version = "^7.0.1", python = "==3.6" },
    { version = "^7.3.0", python = ">=3.7" },
]
restructuredtext-lint = "^1.4.0"
yamllint = [
    { version = "^1.28.0", python = "==3.6" },
    { version = "^1.29.0", python = ">=3.7" },
]

[tool.poetry.dependencies]
python = "^3.8"
Click = "8.1.3"
pydantic = "1.10.9"
httpx = "0.24.1"
websockets = "11.0.3"
auth0-python = "4.3.0"
typer = "0.9.0"
PyJWT = "2.7.0"
requests = "2.31.0"
rich = "13.4.2"
urllib3 = "1.26.6"
colorama = "0.4.6"
wheel = "0.36.2"
jsonlines = "3.1.0"
requests_oauthlib = "1.3.1"
platformdirs = "3.9.1"
merge_args = "0.1.5"
