[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "greynoiselabs"
version = "0.1.25"
description = "Abstraction to interact with GreyNoise Labs GraphQL API."
authors = ["GreyNoise Intelligence <labs@greynoise.io>"]
license = "MIT"
readme = "README.rst"
homepage = "https://api.labs.greynoise.io/"
repository = "https://github.com/GreyNoise-Intelligence/greynoiselabs"
documentation = "https://api.labs.greynoise.io/"
keywords = ["internet", "scanning", "threat intelligence", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.scripts]
greynoiselabs = "greynoiselabs.cli.main:app"

[tool.poetry.dev-dependencies]
ariadne-codegen = "0.8.0"
pre-commit = "3.3.3"
tox = "4.6.4"
wheel = "0.41.0"
black = "^23.1.0"
ruff = "0.0.280"
isort = "^5.12.0"
mock = "^5.0.1"
pylint = "^2.17.4"
pytest-cov = "^4.0.0"
pytest = "^7.3.0"
restructuredtext-lint = "^1.4.0"
yamllint = "^1.29.0"

[tool.poetry.dependencies]
python = ">=3.9,<4"
Click = "8.1.6"
pydantic = "2.0.0,<3.0.0"
httpx = "0.24.1"
websockets = "11.0.3"
auth0-python = "4.4.0"
typer = "0.9.0"
PyJWT = "2.8.0"
requests = "2.31.0"
rich = "13.4.2"
urllib3 = "2.0.4"
colorama = "0.4.6"
jsonlines = "3.1.0"
requests_oauthlib = "1.3.1"
platformdirs = "3.9.1"
merge_args = "0.1.5"
